Needed for Java 17 compatibility.